@@ -214,6 +214,7 @@ t/124_cancel_save_djvu.t
 t/1251_save_djvu_with_metadata.t
 t/1252_save_djvu_with_old_metadata.t
 t/126_save_djvu_with_error.t
+t/127_save_djvu_float_resolution.t
 t/131_save_tiff.t
 t/132_cancel_save_tiff.t
 t/133_save_tiff_with_error.t
